--- a/Ecommerce-Proyecto-Final/src/App.css
+++ b/Ecommerce-Proyecto-Final/src/App.css
@@ -4,3 +4,16 @@
   /* padding: 2rem; */
   text-align: center;
 }
+
+header a.active {
+  color: #ffffff;
+  font-weight: 600;
+  background: #b0bd92;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+a.active {
+  color: #3a5668;
+  font-weight: 500;
+}
