--- a/Ecommerce-Proyecto-Final/src/App.css
+++ b/Ecommerce-Proyecto-Final/src/App.css
@@ -3,14 +3,15 @@
   margin: 0 auto;
   /* padding: 2rem; */
   text-align: center;
+  font-family: 'Lexend', serif;
+}
+
+body {
+  background-color: #F3F7E9;
 }
 
 header a.active {
-  color: #ffffff;
-  font-weight: 600;
-  background: #b0bd92;
-  padding: 5px 10px;
-  border-radius: 5px;
+  font-weight: 650;
 }
 
 a.active {
